gh-5484 Fix wrong retention in strm browser Retention column